--- a/KeyInputTester/requirements.txt
+++ b/KeyInputTester/requirements.txt
@@ -1,5 +1,12 @@
+blinker==1.6.2
+click==8.1.7
+Flask==2.3.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
 joblib==1.3.2
+MarkupSafe==2.1.3
 numpy==1.24.4
 scikit-learn==1.3.0
 scipy==1.10.1
 threadpoolctl==3.2.0
+Werkzeug==2.3.7
